# redis-oss-release-automation

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/actions/common/: github_helpers.sh  helpers.sh  slack.sh
.github/actions/create-tag-verified/: README.md  action.yml  create-tag-verified.sh
.github/actions/determine-module-build-system/: action.yml
.github/actions/ensure-release-branch/: README.md  action.yml  ensure-release-branch.sh
.github/actions/merge-branches-verified/: README.md  action.yml  merge-branches-verified.sh
.github/actions/validate-redis-release-archive/: README.md  action.yml  validate-redis-release-archive.sh
.github/workflows/: go-redis.yml  homebrew-formula.yml  jedis.yml  lettuce.yml  node-redis.yml  nredis-stack.yml  redis-py.yml  redis_release.yml  run-tests.yml  stackexchange-redis.yml  test.yml  validation.yml
docs/: readme.md  slack-bot-architecture.md
src/redis_release/: __init__.py  cli.py  cli_util.py  concurrency.py  config.py  conversation_models.py  github_app_auth.py  github_client.py  github_client_async.py  github_token_provider.py  logging_config.py  models.py  orchestrator.py  slack_bot.py  slack_emojis.py  sso_ui.py  state_console.py  state_display.py  state_manager.py  state_simplified.py  state_slack.py  tree.py  workflow_executor.py
src/redis_release/bht/: args.py  aws_auth.py  backchain.py  behaviours.py  behaviours_cli_static.py  behaviours_clientimage.py  behaviours_clienttest.py  behaviours_debian.py  behaviours_docker.py  behaviours_formula.py  behaviours_homebrew.py  behaviours_rpm.py  behaviours_snap.py  composites.py  conversation_behaviours.py  conversation_helpers.py  conversation_llm.py  conversation_state.py  conversation_tree.py  decorators.py  logging_wrapper.py  ppas.py  state.py  tree.py  tree_factory.py  tree_factory_cli_static.py  tree_factory_clientimage.py  tree_factory_clienttest.py  tree_factory_debian.py  tree_factory_docker.py  tree_factory_formula.py  tree_factory_generic.py  tree_factory_homebrew.py  tree_factory_protocol.py  tree_factory_rpm.py  tree_factory_snap.py
src/tests/: __init__.py  test_condition_guard.py  test_formula_gate.py  test_github_client_async.py  test_github_token_provider_concurrency.py  test_identify_target_ref.py  test_llm_prompts.py  test_parallel.py  test_parallel_integration.py  test_ppa.py  test_redis_version.py  test_resolve_client_version.py  test_state.py  test_state_display.py  test_status_flag_guard.py  test_tree.py
test/: run-shell-func-tests.sh
