[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[project]
name = "redis-release-cli"
version = "0.1.0"
description = "Redis OSS Release Automation CLI"
authors = [
    {name = "Redis Team", email = "team@redis.io"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "boto3>=1.26.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "py_trees>=2.2,<3.0",
    "pyyaml>=6.0.3",
    "slack-sdk>=3.38.0",
    "slack-bolt>=1.27.0",
    "openai>=1.0.0",
    "cryptography>=41.0.0",
    "janus>=2.0,<2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
redis-release = "redis_release.cli:app"

[project.urls]
Homepage = "https://github.com/redis/redis-oss-release-automation"
Repository = "https://github.com/redis/redis-oss-release-automation"
Issues = "https://github.com/redis/redis-oss-release-automation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/redis_release"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
